// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should onReadRequest(offset, callback) 1`] = `
Object {
  "calls": Array [
    Array [
      "onReadRequest",
      [Function],
    ],
  ],
  "instances": Array [
    undefined,
  ],
}
`;

exports[`should onReadRequest(offset, callback) 2`] = `
Object {
  "calls": Array [
    Array [
      0,
      Buffer [],
    ],
  ],
  "instances": Array [
    undefined,
  ],
}
`;
